{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 24,
  "lineage": "40c4757b-9c6f-fb53-cc6f-a5acbfc2ba94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "server_linux_rdp_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:318539273132:loadbalancer/app/tf-lb-20230923170441084100000003/67da0e39b08f379a",
            "arn_suffix": "app/tf-lb-20230923170441084100000003/67da0e39b08f379a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20230923170441084100000003-541641340.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:318539273132:loadbalancer/app/tf-lb-20230923170441084100000003/67da0e39b08f379a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20230923170441084100000003",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0524c599e76b6b44b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f6d0c95199f2729"
              },
              {
                "subnet_id": "subnet-0fb560460d3b1561c"
              }
            ],
            "subnets": [
              "subnet-05f6d0c95199f2729",
              "subnet-0fb560460d3b1561c"
            ],
            "tags": {
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-038a62ee3f535b854",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.server_linux_rdp_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "server_linux_rdp_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:318539273132:listener/app/tf-lb-20230923170441084100000003/67da0e39b08f379a/5f2d683072916ffa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:318539273132:targetgroup/tf-20230923170438486300000001/7e3ce875d02de0a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:318539273132:listener/app/tf-lb-20230923170441084100000003/67da0e39b08f379a/5f2d683072916ffa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:318539273132:loadbalancer/app/tf-lb-20230923170441084100000003/67da0e39b08f379a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "mail": "orpimel@gmail.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.server_linux_rdp_lb",
            "aws_lb_target_group.server_linux_rdp_tg",
            "aws_security_group.server_linux_rdp_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "server_linux_rdp_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:318539273132:targetgroup/tf-20230923170438486300000001/7e3ce875d02de0a8",
            "arn_suffix": "targetgroup/tf-20230923170438486300000001/7e3ce875d02de0a8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:318539273132:targetgroup/tf-20230923170438486300000001/7e3ce875d02de0a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20230923170438486300000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "mail": "orpimel@gmail.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_linux_rdp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:security-group/sg-0524c599e76b6b44b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0524c599e76b6b44b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230923170438498300000002",
            "name_prefix": "terraform-",
            "owner_id": "318539273132",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:network-acl/acl-0e385c4b37b037f61",
            "default_network_acl_id": "acl-0e385c4b37b037f61",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e385c4b37b037f61",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "318539273132",
            "subnet_ids": [
              "subnet-05f6d0c95199f2729",
              "subnet-06f9f52b52b60910b",
              "subnet-0ac2c2369c21e598c",
              "subnet-0fb560460d3b1561c"
            ],
            "tags": {
              "Name": "-default",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "-default",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:route-table/rtb-0a69ea1415ace4bbd",
            "default_route_table_id": "rtb-0a69ea1415ace4bbd",
            "id": "rtb-0a69ea1415ace4bbd",
            "owner_id": "318539273132",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "-default",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "-default",
              "mail": "orpimel@gmail.com"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:security-group/sg-051589929071d4170",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-051589929071d4170",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "318539273132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "-default",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "-default",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:internet-gateway/igw-0f5e292d7373af47c",
            "id": "igw-0f5e292d7373af47c",
            "owner_id": "318539273132",
            "tags": {
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f5e292d7373af47c",
            "id": "r-rtb-05dd183cc25a54e0e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05dd183cc25a54e0e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:route-table/rtb-04d473b1286ab8bd3",
            "id": "rtb-04d473b1286ab8bd3",
            "owner_id": "318539273132",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-private-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "-private-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:route-table/rtb-09b79ef2d8a022d77",
            "id": "rtb-09b79ef2d8a022d77",
            "owner_id": "318539273132",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-private-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "-private-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:route-table/rtb-05dd183cc25a54e0e",
            "id": "rtb-05dd183cc25a54e0e",
            "owner_id": "318539273132",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-public",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "-public",
              "mail": "orpimel@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fefec1c108f79588",
            "route_table_id": "rtb-04d473b1286ab8bd3",
            "subnet_id": "subnet-06f9f52b52b60910b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eff5d84d0991bef",
            "route_table_id": "rtb-09b79ef2d8a022d77",
            "subnet_id": "subnet-0ac2c2369c21e598c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d6af801f256bce8",
            "route_table_id": "rtb-05dd183cc25a54e0e",
            "subnet_id": "subnet-05f6d0c95199f2729"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c568501fa3b9d4b1",
            "route_table_id": "rtb-05dd183cc25a54e0e",
            "subnet_id": "subnet-0fb560460d3b1561c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:subnet/subnet-06f9f52b52b60910b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f9f52b52b60910b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318539273132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-private-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "-private-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:subnet/subnet-0ac2c2369c21e598c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac2c2369c21e598c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318539273132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-private-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "-private-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:subnet/subnet-05f6d0c95199f2729",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f6d0c95199f2729",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318539273132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "-public-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:subnet/subnet-0fb560460d3b1561c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb560460d3b1561c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318539273132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "-public-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-038a62ee3f535b854"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:vpc/vpc-038a62ee3f535b854",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e385c4b37b037f61",
            "default_route_table_id": "rtb-0a69ea1415ace4bbd",
            "default_security_group_id": "sg-051589929071d4170",
            "dhcp_options_id": "dopt-0ecb751b23a31d727",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038a62ee3f535b854",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a69ea1415ace4bbd",
            "owner_id": "318539273132",
            "tags": {
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "mail": "orpimel@gmail.com"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}